[metadata]
name = LACS-node
version = 1.0
author = L
description = An extension of LACS for another server to replicate firewall changes too
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snapwhiz914/LACS-node
project_urls =
    Bug Tracker = https://github.com/Snapwhiz914/LACS-node/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    schema
    pyyaml
    requests

[options.entry_points]
console_scripts =
        start-LACS_node = LACS_node:main.main